<?xml version="1.0"?>
<package>
  <name>ur_nmea_driver</name>
  <version>0.0.1</version>
  <description>The plain NMEA driver package</description>
  <url type="website">https://github.com/avrora-robotics/ur_nmea_driver</url>

  <license>BSD3</license>

  <maintainer email="elisabethsh08@gmail.com">Elizaveta Shaposhnikova</maintainer>
  <author email="elisabethsh08@gmail.com">Elizaveta Shaposhnikova</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>gps_common</build_depend>

  <run_depend>roscpp</run_depend>

</package>
